# cogen

./: CMakeLists.txt  README.md  build.sh  config.hpp.in  default.nix  errors.cpp  errors.h  exporter  license_text  modegen  outputs  shell.nix
cogen/: CMakeLists.txt  cogenwr.py  main.cpp  main.cpp.in
cogen/examples/: ix3_errors  ix3_example
cogen/generators/: cpp_decl.info  cpp_py.info  nghttp_srv.info
cogen/lib/: standard_types.info
cogen/lib/cpp/: cpppy.jinja  cpppy_header.jinja  declarations.jinja  definitions.jinja  header.jinja  nghttp_srv.jinja  nghttp_srv_hdr.jinja  render.jinja
cogen/src/: executer.cpp  executer.hpp  flist_provider.cpp  flist_provider.hpp  jinja_json_prov.cpp  jinja_json_prov.hpp  json_provider.cpp  json_provider.hpp  path_config.cpp  path_config.hpp  searcher.cpp  searcher.hpp
cogen/tests/: cogen_utils.cpp  cpp_decl.py  results.py
cogen/tests/resources/: exmp_combine_module.cpp  exmp_external_module.cpp  exmp_mod.cpp
cogen/tests/resources/cs/: client.cpp  cmake.cmake  csi  server.cpp
common_utils/: CMakeLists.txt  naming.cpp  naming.hpp
common_utils/input/: compiled_result.cpp  compiled_result.hpp  complilation_config.cpp  complilation_config.hpp  declarations.hpp  imports_manager.cpp  imports_manager.hpp  input.cpp  input.hpp  links.cpp  links.hpp  map_to.cpp  map_to.hpp  out_compiler.cpp  out_info.cpp  out_info.hpp  split_by_ver.cpp  split_by_ver.hpp  tree.cpp  tree.hpp
common_utils/tests/: imports_manager.cpp  input.cpp  links_manager.cpp  map_to_from.cpp  mocks.hpp  naming.cpp  split_by_ver.cpp  tree.cpp
common_utils/utils/: declarations.hpp  generic_dsl.hpp  imports_manager.cpp  imports_manager.hpp  input.cpp  input.hpp  map_from.cpp  map_from.hpp  map_to.cpp  map_to.hpp  naming.cpp  naming.hpp  out_compiler.cpp  out_compiler.hpp  split_by_ver.cpp  split_by_ver.hpp  tree.cpp  tree.hpp
ic/: CMakeLists.txt  abstract_part.cpp  abstract_part.hpp  core.cpp  core.hpp  declarations.hpp  generation_part.cpp  generation_part.hpp  imports_manager.cpp  imports_manager.hpp  input.cpp  input.hpp  provider.hpp  ptsetts.cpp  ptsetts.hpp  single_gen_part.cpp  single_gen_part.hpp
ic/algos/: split.cpp  split.hpp
ic/tests/: abstract_part_test.cpp  core_test.cpp  imports_manager_test.cpp  mocks.hp  mocks.hpp  ptsetts_test.cpp  single_gen_part_test.cpp
mdg2/: CMakeLists.txt  main.cpp  mdgwr.py
mdg2/examples/: ix3_example  ix3_example_inc  ix3_example_inc_dir
mdg2/generators/: cpp_decl.info  cpp_py.info
mdg2/lib/: standard_types.info
mdg2/lib/cmake/: plain.jinja  pybind11.jinja
mdg2/lib/cpp/: cpppy.jinja  cpppy_header.jinja  declarations.jinja  definitions.jinja  header.jinja  render.jinja
mdg2/src/: executer.cpp  executer.hpp  json_provider.cpp  json_provider.hpp  path_config.cpp  path_config.hpp  searcher.cpp  searcher.hpp
mdg2/tests/: cpp_decl.py  results.py
mdg2/tests/resources/: exmp_cmake.cmake  exmp_combine_module.cpp  exmp_external_module.cpp  exmp_mod.cpp
next/: CMakeLists.txt  config.hpp.in  cov.sh  errors.cpp  errors.h
next/cmake/: target_sources_local.cmake
next/generation/: common.cpp  common.hpp  cpp.cpp  cpp.hpp  file_data.cpp  file_data.hpp  provider.cpp  provider.hpp  pythongen.cpp  pythongen.hpp
next/generation/cpp/: declarations.info  header.jinja  render.jinja  type_converter.cpp  type_converter.h
next/generation/interface/: filter.cpp  filter.hpp  naming.cpp  naming.hpp  to_json.cpp  to_json.h  to_json.hpp
next/modegen/: main.cpp
next/parser/: loader.cpp  loader.hpp
next/parser/interface/: check.hpp  grammar.cpp  grammar.hpp  helpers.cpp  loader.cpp  loader.hpp  meta_parameters.cpp  modegen.cpp  modegen.hpp
next/tests/: common_test.cpp
next/tests/generation/: common_test.cpp  cpp_test.cpp  cpp_type_cvt_test.cpp  name_conversion_test.cpp  split_by_version_test.cpp  to_json_test.cpp
next/tests/interface/: checker_test.cpp  mdp_test.cpp
next/tests/unsorted/: CMakeLists.txt
parser/builders/: CMakeLists.txt
parser/builders/src/: loader.cpp  loader.hpp  manager.cpp  manager.hpp  nodes.cpp  nodes.hpp
parser/builders/tests/: generic_ast.cpp  loader.cpp
parser/ix3/: CMakeLists.txt  common.hpp  env.cpp  env.hpp  ix3.vim  loader.cpp  loader.hpp  parse.hpp  parser.cpp  parser.hpp
parser/ix3/ast/: common.cpp  common.hpp  entity.hpp  file.hpp  functions.hpp  meta.cpp  meta.hpp
parser/ix3/cmake/: tests.inc.cmake
parser/ix3/fusion/: common.hpp  entity.hpp  file.hpp  functions.hpp  meta.hpp
parser/ix3/grammar/: all.hpp  common.hpp  entity.hpp  file.hpp  functions.hpp  meta.hpp
parser/ix3/grammar_def/: all.hpp  common.cpp  common.hpp  entity.cpp  entity.hpp  file.cpp  file.hpp  functions.cpp  functions.hpp  meta.cpp  meta.hpp
parser/ix3/operators/: functions.cpp  functions.hpp
parser/ix3/tests/: ix3_parser_tree_test.cpp  ix3_rules_common_test.cpp  ix3_rules_entity_test.cpp  ix3_rules_file_test.cpp  ix3_rules_functions_test.cpp  ix3_rules_meta_test.cpp  ix3_utils_checker_test.cpp  ix3_utils_filter_test.cpp  ix3_utils_naming_test.cpp  ix3_utils_parser_test.cpp  ix3_utils_remove_empty_test.cpp  ix3_utils_selector_test.cpp  ix3_utils_split_by_version_test.cpp  ix3_utils_to_generic_ast_test.cpp  mocks.hpp
parser/ix3/utils/: checker.cpp  checker.hpp  evaluator.cpp  evaluator.hpp  filter.cpp  filter.hpp  meta.cpp  meta.hpp  naming.cpp  naming.hpp  remove_empty.cpp  remove_empty.hpp  selector.cpp  selector.hpp  split_by_version.cpp  split_by_version.hpp  to_generic_ast.cpp  to_generic_ast.hpp  traverser.cpp  traverser.hpp
parser/ix3/utils/details/: ast_nodes.cpp  ast_nodes.hpp  cpp_compiler.cpp  cpp_compiler.hpp  ix3_node_base.cpp  ix3_node_base.hpp  sep_nodes.cpp  sep_nodes.hpp
parser/ix3/utils/helpers/: copy_by_version.hpp  copy_by_version_traits.cpp  (+1 more)
parser/sddl/: CMakeLists.txt
parser/sddl/sddl/: main.cpp
parser/sddl/tests/: loader.cpp
parser/standard_types/: CMakeLists.txt
parser/standard_types/src/: loader.cpp  loader.hpp  manager.cpp  manager.hpp  nodes.cpp  nodes.hpp
parser/standard_types/tests/: generic_ast.cpp
tests/srv-cpp/: CMakeLists.txt  mod.md  srv.cpp
(+242 files in other folders)
